# ConwaysGameOfLife

./: CMakeLists.txt  README.md
src/: constants.h  main.c  tilemap.c  tilemap.h
